--- a/talkIsCheapShowMeTheCode/手写代码题.md
+++ b/talkIsCheapShowMeTheCode/手写代码题.md
@@ -1,6 +1,6 @@
 ## 1. 手写一个new操作符
 <!-- http://blog.ifyouseewendy.com/blog/2017/07/03/review-you-dont-know-js-this-and-object-prototypes/#what-happened-when-we-callnew- -->
-## new操作符做了哪些事情？
+### new操作符做了哪些事情？
 1. 它创建了一个全新的对象
 2. 它会被执行[[Prototype]]（也就是__proto__）链接
 3. 它使this指向新创建的对象
@@ -509,3 +509,564 @@ function instanceOf(left, right) {
     }
 }
 ```
+
+## 数组扁平化
++ 方法1. 使用reduce
+```js
+const flat = arr => {
+    return arr.reduce((pre, cur) => {
+        // MDN 二维数组拍平 prev.concat(cur)
+        return pre.concat(Array.isArray(cur) ? flat(cur) : cur)
+    }, [])
+}
+```
+
++ 方法2. 使用函数递归
+```js
+const flat1 = arr => {
+    const res = [];
+    const fn = arr => {
+        for (let i = 0; i < arr.lengths; i++) {
+            if(Array.isArray(arr[i])) {
+                fn(arr[i])
+            } else {
+                res.push(arr[i])
+            }
+        }
+    }
+    fn(arr)
+    return res
+}
+```
+
+## 数组去重
+```js
+const res = Array.from(new Set(arr))
+
+// indexOf
+const unique = arr => {
+    const res = []
+    for (let i = 0; i < arr.length; i++) {
+        if (res.indexOf(arr[i]) === -1) res.push(arr[i])
+    }
+    return res
+}
+```
+
+### 类数组转化为数组
+```js
+// 1. Array.from
+Array.from(document.querySelectorAll('div'))
+
+// 2. Array.prototype.slice.call()
+Array.prototype.slice.call(document.querySelectorAll('div'))
+
+// 3. 扩展运算符
+[...document.querySelectorAll('div')]
+
+// 4. Array.prototype.concat.apply
+Array.prototype.concat.apply([], document.querySelector('div'))
+```
+
+## Array.prototype.filter()
+
+var newArray = arr.filter(callback()[,thisArg])
+```js
+Array.prototype._filter(callback, thisArg) {
+    if (this === undefined) {
+        throw new TypeError('this is null or not undefined')
+    }
+    if (typeof callback !== 'function') {
+        throw new TypeError(callback + 'is not a function')
+    }
+
+    const res = []
+    // 让Obj成为回调函数的对象传递（强制转换对象）
+    const Obj = Object(this);
+    // >>>0 保证len为number，且为正整数
+    const len = Obj.length >>> 0
+    for (let i = 0; i < len; i++) {
+        if (i in Obj) {
+            if (callback.call(thisArg, Obj[i], i, Obj)) {
+                res.push(Obj[i])
+            }
+        }
+    }
+    return res
+}
+```
+
+## Array.prototype.map()
+
+```js
+Array.prototype._map(callback, thisArg) {
+    if (this === undefined) {
+        throw new TypeError('')
+    }
+    if (typeof callback !== 'function') {
+        throw new TypeError('')
+    }
+
+    const res = []
+
+    const obj = Object(this)
+    const len = obj.length >>> 0
+    for (let i = 0; i < len; i++) {
+        if (i in obj) {
+            // 调用回调函数并传入新数组
+            res[i] = callback.call(thisArg, ojb[i], i, this)
+        }
+    }
+    return res
+}
+```
+
+## Array.prototype.forEach()
+```js
+Array.prototype._forEach(callback, thisArg) {
+    if (this === undefined) {
+        throw new TypeError('')
+    }
+    if (typeof callback !== 'function') {
+        throw new TypeError('')
+    }
+    const obj = Object.create(this)
+    const len = obj.length >>> 0
+    for (let i = 0; i < len; i++) {
+        if (i in obj) {
+            callback.call(thisArg, obj[i], i, obj)
+        }
+    }
+}
+```
+
+## Array.prototype.reduce()
+```js
+Array.prototype._reduce(callback, initVal) {
+    if (this === undefined) {
+        throw new TypeError('')
+    }
+
+    if (typeof callback !== 'function') {
+        throw new TypeError('')
+    }
+
+    const obj = Object.create(this)
+
+    const len = obj.length >>> 0
+
+    let accumulator = initVal;
+    let k = 0
+
+    // 如果第二个参数是undefined的情况下
+    // 则数组的第一个有效值作为累加器的初始值
+    if (accumulator === undefined) {
+        while (k < len && !(k in obj)) {
+            k++
+        }
+        // 如果超出数组界限，还没找到累加器的初始值，那么则typeError
+        if (k >= len) {
+            throw new TypeError('')
+        }
+        accumulator = obj[k++]
+    }
+    while (k < len) {
+        if (k in Obj) {
+            accumulator = callback.call(undefined, accumulator, obj[k], k, obj)
+        }
+        k++
+    }
+    return accumulator;
+}
+```
+
+## Function.prototype.apply()
+
+```js
+Function.prototype.apply = function (context  = window, args) {
+    if (typeof this !== 'function') {
+        throw new TypeError('')
+    }
+
+    const fn = Symbol('fn')
+    context[fn] = this
+
+    const res = context[fn](...args)
+
+    delete context[fn]
+
+    return res;
+}
+```
+
+## Function.prototype.call()
+```js
+Function.prototype.call = function (context = window, ...args) {
+    if (typeof this !== 'function') {
+        throw new TypeError('')
+    }
+
+    const fn = Symbol('fn')
+    context[fn] = this
+
+    const res = context[fn](...args)
+    delete context[fn]
+
+    return res
+}
+```
+
+## Function.prototype.bind(context, ...args)
+
+```js
+Function.prototype.bind = function (context, ...args) {
+    if (typeof this !== 'function') {
+        throw new TypeError('')
+    }
+
+    let self = this
+
+    return function F() {
+        // 考虑 new的情况
+        if (this instanceof F) {
+            return new self(...args, ...argument)
+        }
+        return self.apply(context, [...args, ...arguments])
+    }
+}
+```
+
+## debounce(防抖动)
+
+```js
+const debounce = (fn, await) => {
+    let timeout = null;
+    return function () {
+        clearTimeout(timeout)
+        timeout = setTimeout(() => {
+            fn.apply(this, arguments)
+        }, await)
+    }
+}
+```
+
+## throttle(节流)
+
+```js
+const throttle = (fn, await, immediate) => {
+    let prev = new Date()
+    return function () {
+        if (immediate) {
+            fn.apply(this, arguments)
+        }
+        let now = new Date()
+
+        if (now - prev > await) {
+            fn.apply(this, arguments)
+            prev = new Date()
+        }
+
+    }
+}
+```
+
+## 函数柯里化
+
+```js
+function curry (fn, args) {
+    let length = fn.length,
+        arg = args || []
+     
+    return function () {
+        let newArgs = arg.concat(Array.prototype.slice.call(arguments))
+
+        if (newArgs.length < length) {
+            return curry.call(this, fn, newArgs)
+        } else {
+            return fn.apply(this, newArgs)
+        }
+    }
+
+}
+```
+
+## 模拟new操作
+new之后发生3个步骤
+1. 以ctor.prototype为原型创建一个对象。
+2. 执行构造函数并将this绑定到新创建的对象上
+3. 判断构造函数执行返回的结果是否是引用数据类型，若是则返回构造函数执行的结构，否则返回创建的对象。
+ 
+```js
+function newOperator(ctor, ...args) {
+    if (typeof ctor !== 'function') {
+        throw new TypeError('')
+    }
+
+    const obj = Object.create(ctor.prototype)
+    const res = ctor.apply(obj, args)
+
+    const isObject = typeof res === 'object' && res !== null
+    const isFunction = typeof res === 'function'
+
+    return isObject || isFunction ? res : obj
+}
+```
+
+## instanceof
+
+instanceof 运算符用于检测构造函数的prototype属性是否出现在某个实例对象的原型链上。
+```js
+const _instanceof = (left, right) => {
+    // 基础类型都返回false
+    if (typeof left !== 'object' || left === null) return false
+
+    let proto = Object.getPrototypeOf(left)
+
+    while(true) {
+        if (proto === null) return false;
+        if (proto === right.prototype) return true;
+        proto = Object.getPrototypeOf(proto)
+    }
+}
+```
+
+## 原型继承
+
+```js
+function Parent(name) {
+    this.name = name
+}
+
+Parent.prototype.sayName = function () {
+    console.log('parent name: ', this.name)
+}
+
+function Child(name) {
+    Parent.call(this, parentName)
+    this.name = name
+}
+
+function create(proto) {
+    function F() {}
+    F.prototype = proto
+    return new F()
+}
+
+Child.prototype = create(Parent.prototype)
+Child.prototype.sayName = function () {
+    console.log('child name: ', this.name)
+}
+
+Child.prototype.constructor = Child;
+
+var parent = new Parent('father')
+parent.sayName()
+
+var child = new Child('son', 'father')
+```
+
+## 深拷贝
+
+```js
+const cloneDeep = (obj) => {
+    if (typeof obj !== 'object' || target === null) {
+        return obj
+    }
+
+}
+```
+
+## Promise 
+```js
+```
+
+## Promise.all
+Promise.all是支持链式调用的，本质上就是返回了一个Promise实例，通过resolve和reject来改变实例状态。
+```js
+Promise._all = function (promiseArr) {
+    return new Promise((resolve, reject) => {
+        const ans = []
+        let index = 0;
+        for (let i  = 0; i < promiseArr.length; i++) {
+            promiseArr[i]
+            .then(res => {
+                ans[i] = res
+                index++
+
+                if (index === promiseArr.length) {
+                    resolve(ans)
+                }
+            })
+            .catch(err => reject(err))
+        }
+    })
+}
+```
+
+## Promise.race
+```js
+Promise.race = function(promiseArr) {
+    return new Promise((resolve, reject) => {
+        promiseArr.forEach( p => {
+            // 如果不是Promise实例需要转化为Promise实例
+            Promise.resolve(p).then(
+                val => resolve(val),
+                err => reject(err)
+            )
+        })
+    })
+}
+```
+
+## Promise并行限制
+```js
+class Scheduler {
+    constructor () {
+        this.queue = []
+        this.maxCount = 2
+        this.runCounts = 0
+    }
+
+    add (promiseCreator) {
+        this.queue.push(promiseCreator)
+    }
+
+    taskStart() {
+        for (let i = 0; i < this.maxCount; i++) {
+            this.request()
+        }
+    }
+
+    request () {
+        if (!this.queue || !this.queue.length || this.runCounts >= this.maxCount) {
+            return
+        }
+        this.runCount++
+
+        this.queue.shift()().then(() => {
+            this.runCounts--;
+            this.request();
+        })
+    }
+
+}
+```
+
+## JSONP
+
+## AJAX
+```js
+const getJson = function(url) {
+    return new Promise((resolve, reject) => {
+        const xhr = XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject('Microsoft.XMLHttp');
+
+        xhr.open('GET', url, false)
+        xhr.setRequestHeader('Accept', 'application/json')
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState !== 4) return
+            if (xhr.status === 200 || xhr.status === 304){
+                resolve(xhr.responseText)
+            } else {
+                reject(new Error(xhr.responseText))
+            }
+        }
+        xhr.send()
+    })
+}
+```
+
+## event模块
+实现node中的回调函数的机制，node中回调函数其实是内部使用了观察者模式。
+
+观察者模式：定义了对象间一种一对多的依赖关系，当目标对象Subject发生改变时，所有依赖它的对象Observer都会得到通知；
+```js
+function EventEmitter() {
+    this.events = new Map();
+}
+// 需要实现的一些方法
+// addListener, removeListener, once, removeAllListeners, emit等
+// 包装回调
+const wrapCallback = (fn, once = false) => ({callback: fn, once})
+
+// 模拟实现addListener
+EventEmitter.prototype.addListener = function(type, fn, once = false) {
+    const handler = this.events.get(type)
+
+    if(!handler) {
+        // 没有type绑定事件
+        this.events.set(type, wrapCallback(fn, once))
+    } else if (handler && typeof handler.callback === 'function') {
+        // 目前type事件只有一个回调
+        this.events.set(type, [handler, wrapCallback(fn, once)])
+    } else {
+        // 目前type事件数>=2
+        handler.push(wrapCallback(fn, once))
+    }
+}
+
+// 模拟实现removeListener
+EventEmitter.prototype.removeListener = function(type, listener) {
+    const handler = this.events.get(type)
+
+    if (!handler) return
+    
+    if (!Array.isArray(handler)) {
+        if(handler.callback === listener.callback) this.event.delete(type)
+        else return
+    }
+
+    for (let i = 0; i < handler.length; i++) {
+        const item = handler[i]
+
+        if (item.callback === listener.callback) {
+            handler.splice(i, 1)
+            i--
+
+            if(handler.length === 1) {
+                this.events.set(type, handler[0])
+            }
+        }
+    }
+}
+
+// 实现once方法
+EventEmitter.prototype.once = function (type, listener) {
+    this.addListener(type, listener, true)
+}
+
+// 模拟实现emit方法
+EventEmitter.prototype.emit = function(type, ...args) {
+    const handler = this.events.get(type)
+
+    if (!handler) return
+
+    if (Array.isArray(handler)) {
+        handler.forEach(item => {
+            item.callback.apply(this, args)
+            if (item.once) {
+                this.removeListener(type, item)
+            }
+        })
+    } else {
+        handler.callback.apply(this, args)
+        if (handler.once) {
+            this.evnets.delete(type)
+        }
+    }
+
+    return true
+}
+
+// 实现removeALl
+EventEmitter.prototype.removeAllListeners = function(type) {
+    const handler = this.events.get(type)
+    if (!handler) return
+    this.events.delete(type)
+}
+```
+
+
+
+
+
+
