--- a/talkIsCheapShowMeTheCode/手写代码题.md
+++ b/talkIsCheapShowMeTheCode/手写代码题.md
@@ -16,9 +16,10 @@ function New(fn) {
     }
     // 3. 它使this指向新创建的对象
     var ret = fn.apply(res, Array.prototype.slice.call(arguments, 1))
-
     // 4. 通过new创建的每个对象将最终被[[Prototype]]链接到这个函数的prototype对象上。
-    // 5. 如果函数没有返回对象类型Object（包含Function，Array，Date，RegExg，Error），那么new表达式中的函数调用将返回该对象引用。
+    // 5. 如果函数没有返回对象类型Object 
+    //（包含Function，Array，Date，RegExg，Error），
+    // 那么new表达式中的函数调用将返回该对象引用。
     if ((typeof ret === 'object' || typeof ret === 'function' && ret !== null)) {
         return ret
     }
@@ -149,7 +150,9 @@ Function.prototype._bind = function (context) {
         args = [...arguments].slice(1);
     
     let resFn = function () {
-        return fn.apply(this instanceof resFn ? this : context,args.concat(...arguments))
+        return fn.apply(this instanceof resFn 
+                                ? this 
+                                : context,args.concat(...arguments))
     }
 
     function tmp() {}
@@ -164,6 +167,7 @@ Function.prototype._bind = function (context) {
 ### 寄生组合式继承
 - 一般只建议写这种，因为其他方式的继承会在一次实例中调用两次父类的构造函数或其他缺点
 ```js
+// 寄生组合
 // 核心实现是：用一个F空的构造函数去取代执行了Parent这个构造函数
 function Parent(name) {
     this.name = name
@@ -281,7 +285,7 @@ myPromise.prototype.then = function(onFulfilled, onRejected) {
 }
 ```
 ```js
-// 专业版
+// Promise专业版
 const PENDING = 'pending',
       FULFILLED = 'fulfilled',
       REJECTED = 'rejected;
@@ -479,7 +483,7 @@ function throttle(fn, await) {
 var newObj = JSON.parse(JSON.stringify(someObj));
 ```
 ```js
-// 面试够用版
+// Js深拷贝够用版
 function deepClone(obj) {
     if (obj == null) { return null } 
     if (typeof obj === 'object') {
@@ -523,6 +527,7 @@ const flat = arr => {
 
 + 方法2. 使用函数递归
 ```js
+// 方法2. 使用函数递归
 const flat1 = arr => {
     const res = [];
     const fn = arr => {
@@ -646,18 +651,13 @@ Array.prototype._reduce(callback, initVal) {
     if (this === undefined) {
         throw new TypeError('')
     }
-
     if (typeof callback !== 'function') {
         throw new TypeError('')
     }
-
     const obj = Object.create(this)
-
     const len = obj.length >>> 0
-
     let accumulator = initVal;
     let k = 0
-
     // 如果第二个参数是undefined的情况下
     // 则数组的第一个有效值作为累加器的初始值
     if (accumulator === undefined) {
@@ -671,9 +671,7 @@ Array.prototype._reduce(callback, initVal) {
         accumulator = obj[k++]
     }
     while (k < len) {
-        if (k in Obj) {
-            accumulator = callback.call(undefined, accumulator, obj[k], k, obj)
-        }
+        if (k in Obj) { accumulator = callback.call(undefined, accumulator, obj[k], k, obj) }
         k++
     }
     return accumulator;
@@ -683,7 +681,7 @@ Array.prototype._reduce(callback, initVal) {
 ## Function.prototype.apply()
 
 ```js
-Function.prototype.apply = function (context  = window, args) {
+Function.prototype._apply = function (context  = window, args) {
     if (typeof this !== 'function') {
         throw new TypeError('')
     }
@@ -701,7 +699,7 @@ Function.prototype.apply = function (context  = window, args) {
 
 ## Function.prototype.call()
 ```js
-Function.prototype.call = function (context = window, ...args) {
+Function.prototype._call = function (context = window, ...args) {
     if (typeof this !== 'function') {
         throw new TypeError('')
     }
@@ -719,7 +717,7 @@ Function.prototype.call = function (context = window, ...args) {
 ## Function.prototype.bind(context, ...args)
 
 ```js
-Function.prototype.bind = function (context, ...args) {
+Function.prototype._bind = function (context, ...args) {
     if (typeof this !== 'function') {
         throw new TypeError('')
     }
@@ -836,27 +834,22 @@ const _instanceof = (left, right) => {
 function Parent(name) {
     this.name = name
 }
-
 Parent.prototype.sayName = function () {
     console.log('parent name: ', this.name)
 }
-
 function Child(name) {
     Parent.call(this, parentName)
     this.name = name
-}
-
+}   
 function create(proto) {
     function F() {}
     F.prototype = proto
     return new F()
 }
-
 Child.prototype = create(Parent.prototype)
 Child.prototype.sayName = function () {
     console.log('child name: ', this.name)
 }
-
 Child.prototype.constructor = Child;
 
 var parent = new Parent('father')
@@ -881,8 +874,9 @@ const cloneDeep = (obj) => {
 ```
 
 ## Promise.all
-Promise.all是支持链式调用的，本质上就是返回了一个Promise实例，通过resolve和reject来改变实例状态。
+
 ```js
+// Promise.all是支持链式调用的，本质上就是返回了一个Promise实例，通过resolve和reject来改变实例状态。
 Promise._all = function (promiseArr) {
     return new Promise((resolve, reject) => {
         const ans = []
@@ -905,7 +899,7 @@ Promise._all = function (promiseArr) {
 
 ## Promise.race
 ```js
-Promise.race = function(promiseArr) {
+Promise._race = function(promiseArr) {
     return new Promise((resolve, reject) => {
         promiseArr.forEach( p => {
             // 如果不是Promise实例需要转化为Promise实例
@@ -920,35 +914,33 @@ Promise.race = function(promiseArr) {
 
 ## Promise并行限制
 ```js
+// Promise并行限制
 class Scheduler {
     constructor () {
         this.queue = []
         this.maxCount = 2
         this.runCounts = 0
     }
-
     add (promiseCreator) {
         this.queue.push(promiseCreator)
     }
-
     taskStart() {
         for (let i = 0; i < this.maxCount; i++) {
             this.request()
         }
     }
-
     request () {
-        if (!this.queue || !this.queue.length || this.runCounts >= this.maxCount) {
+        if (!this.queue || 
+            !this.queue.length || 
+            this.runCounts >= this.maxCount) {
             return
         }
         this.runCount++
-
         this.queue.shift()().then(() => {
             this.runCounts--;
             this.request();
         })
     }
-
 }
 ```
 
@@ -958,8 +950,9 @@ class Scheduler {
 ```js
 const getJson = function(url) {
     return new Promise((resolve, reject) => {
-        const xhr = XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject('Microsoft.XMLHttp');
-
+        const xhr = XMLHttpRequest 
+                    ? new XMLHttpRequest() 
+                    : new ActiveXObject('Microsoft.XMLHttp');
         xhr.open('GET', url, false)
         xhr.setRequestHeader('Accept', 'application/json')
         xhr.onreadystatechange = function () {
@@ -1037,9 +1030,7 @@ EventEmitter.prototype.once = function (type, listener) {
 // 模拟实现emit方法
 EventEmitter.prototype.emit = function(type, ...args) {
     const handler = this.events.get(type)
-
     if (!handler) return
-
     if (Array.isArray(handler)) {
         handler.forEach(item => {
             item.callback.apply(this, args)
@@ -1053,7 +1044,6 @@ EventEmitter.prototype.emit = function(type, ...args) {
             this.evnets.delete(type)
         }
     }
-
     return true
 }
 
@@ -1065,8 +1055,252 @@ EventEmitter.prototype.removeAllListeners = function(type) {
 }
 ```
 
+## 图片懒加载
 
+```js
+function lazyload() {
+    window.addEventListener('scroll', function ()) {
+        const imgs = [...document.querySelectorAll('img')];
+        const len = imgs.length;
+        const callback = entries => {
+            entries.forEach(ele => {
+                console.log(ele)
+                if (ele.isIntersecting) { // 是否被观察到
+                    const data_src = ele.target.getAttribute('data-src'); // 真实图片地址
+                    ele.target.setAttribute('src', data_src)
+                    observe.unobserve(ele.target) // 真实地址替换后，取消对它的观察
+                }
+            })
+        }
+        const observe = new IntersectionObserver(callback)
+        imgs.forEach( image => {
+            observe.observe(image) // observe : 被调用的IntersectionObserver实例。给每个图片添加观察实例
+        })
+    }
+}
+```
 
+## 滚动加载
 
+原理就是监听页面滚动事件，分析clientHeight、scrollTop、scrollHeight三者的属性关系。
 
+```js
+window.addEventListener('scroll', function () {
+    const clientHeight = document.documentElement.clientHeight,
+          scrollTop = document.documentElement.scrollTop, 
+          srollHeight = document.documentElement.scrollHeight
 
+    if (clientHeight + scrollTop >= scrollHeight) {
+        // 检测到滚动页面到底部，进行后续操作
+    }
+}, false)
+```
+
+## 渲染几万条数据不卡住页面
+
+```js
+
+// 渲染大量数据
+const load = () => {
+    const total = 100000,
+          once = 20, // 一次插入的数据
+          loopCount = Math.ceil(total / once) // 需要插入的次数
+    let count = 0 // 当前渲染的次数
+
+    const ul = document.getElementByTagName('ul')
+
+    // 添加数据的方法
+    function add() {
+        const fragment = document.createDocumentFragment()
+        for (let i = 0; i < once; i++) {
+            const li = document.createElement('li');
+            li.innerText = Math.floor(Math.random() * total)
+            fragment.appendChild(li)
+        }
+        ul.appendChild(fragment)
+        count++
+        loop()
+    }
+    function loop() {
+        if (count < loopCount) {
+            window.requestAnimationFrame(add)
+        }
+    }
+    loop()
+}
+setTimeout(load, 0)
+```
+
+## 打印出当前网页使用了多少种HTML元素
+
+```js
+const fn = () => {
+    return [...new Set([...document.querySelectorAll('*')].map(el => el.tagName))].length
+}
+```
+
+## 将Virtual Dom转化为真实的DOM结构
+
+```js
+function render(vnode, container) {
+    container.appendChild(_render(vnode))
+}
+function _render(vnode) {
+    if (typeof vnode === 'number') {
+        vnode = String(vnodes)
+    }
+    if (typeof vnode === 'string') {
+        return document.createTextNode(vnodes)
+    }
+    const dom = document.createElement(vnode.tag)
+    if (vnode.attrs) {
+        // 遍历属性
+        Object.keys(vnode.attrs).forEach(key => {
+            const value = vnode.attrs[key]
+            dom.setAttribute(key, value)
+        })
+    }
+    // 子数组进行递归解析
+    vnode.children.forEach( child => render(child, dom))
+    return dom
+}
+```
+
+## 字符串解析问题
+
+```js
+const fn = (str, obj) => {
+    let res = '';
+    // 是否匹配到{
+    let flag = false;
+    let start
+    for (let i = 0; i < str.length; i++) {
+        if (str[i] === '{') {
+            flag = true
+            start = i + 1
+            continue;
+        }
+        if (!flag) res += str[i]
+        else {
+            if (str[i] === '}') {
+                flag = false;
+                res += match(str.slice(start, i), obj)
+            }
+        }
+    }
+    return res
+}
+const match = (str, obj) => {
+    const keys = str.split('.').slice(1)
+    let index = 0
+    let o = ''
+
+    while (index < keys.length) {
+        const key = keys[index]
+        if (!obj[key]) {
+            return `{${str}}`
+        } else {
+            o = obj[key]
+        }
+        index++
+    }
+    return o
+}
+```
+
+## 冒泡排序
+
+```js
+function bubbleSort(arr) {
+    var len = arr.length
+    for (let i = 0; i < len; i++) {
+        for (var j = 0; j < len - 1 - i; j++) {
+            if (arr[j] > arr[j + 1]) {
+                [arr[j], arr[j + 1]] = [arr[j + 1], arr[j]]
+            }
+        }
+    }
+    return arr;
+}
+```
+
+## 选择排序
+
+```js
+function selectSort(arr) {
+    let len = arr.length,
+        minIndex = null
+    
+    for (let i = 0; i < len - 1; i++){
+        minIndex = i;
+        for (let j = i + 1; j < len; j++) {
+            if (arr[j] < arr[minIndex]) {
+                minIndex = j
+            }
+        }
+        [arr[i], arr[minIndex]] = [arr[minIndex], arr[i]]
+    }
+    return arr
+
+}
+```
+
+## 插入排序 
+
+```js
+function insertSort(arr) {
+ if (Array.isArray(arr)) {
+     for (let i = 0; i < arr.length; i++) {
+         let key = arr[i], left = 0, right = i - 1
+         while(left <= right) {
+             let middle = parseInt((left + right) / 2)
+             if (key < arr[middle]) {
+                 right = middle - 1
+             } else {
+                 left = middle + 1
+             }
+         }
+
+         for (let j = i - 1; j >= left;j--) {
+             arr[j + 1] = arr[j]
+         }
+     }
+     return arr
+ } else {
+     throw new TypeError('')
+ }
+}
+```
+
+## 快排
++ 数组分成三部分left、pivot、right，使left<=pivot，right>pivot
++ 递归处理left
++ 递归处理right
++ 合并三者结果
+```js
+function quickSort(arr) {
+    if (arr.length < 2) return arr
+    let pivot = arr[Math.ceil(arr.length / 2)],
+        left = arr.filter((v, i) => (v <= pivot && i !== arr.length - 1)),
+        right = arr.filter(v => v > pivot)
+    return [...quickSort(left), pivot, ...quickSort(right)]
+}
+
+function quickSort2(arr) {
+    if (arr.length < 2) return arr
+    let pivotIndex = Math.floor(arr.length / 2),
+        pivot = arr.splice(pivotIndex, 1)[0],
+        left = [],
+        right = []
+    
+    for (let i = 0; i < arr.length; i++) {
+        if (arr[i] <= pivot) {
+            left.push(arr[i])
+        } else {
+            right.push(arr[i])
+        }
+    }
+
+    return [...quickSort2(left), pivot, ...quickSort2(right)]
+}
+```
